--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -67,3 +67,28 @@ footer .footer_item .nav-link {
     color: #111;
     margin-bottom: 10px;
 }
+.our_client .our_client_content h3 {
+    font-size: 36px;
+    line-height: 40px;
+    color: #111;
+    margin-bottom: 15px;
+}
+.our_client .our_client_content p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+.our_client .our_client_content button {
+    padding: 10px 35px;
+    border: 1px solid #d6d6d6;
+    border-radius: 30px;
+    background-color: #f4f5f6;
+    color: #111;
+}
+.our_client_content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+}
