--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -1,4 +1,44 @@
 
+.navbar {
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  background-color: transparent;
+}
+
+.navbar.scrolled-header {
+  background-color: #111; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.navbar.scrolled-header .navbar-nav .nav-link, .navbar-nav .nav-link.show {
+    color: #fff;
+}
+.navbar.scrolled-header .navbar-brand {
+    color: #fff;
+}
+.top-header {
+    background-color: #151421;
+    border-bottom: 2px solid red;
+    font-size: 14px;
+}
+
+.social-icon {
+  color: #fff;
+  background-color: #0d6efd;
+  padding: 6px;
+  border-radius: 50%;
+  font-size: 14px;
+  text-align: center;
+  width: 28px;
+  height: 28px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+}
+
+.social-icon:hover {
+  background-color: #0056b3;
+}
 .search_header {
     position: relative;
     display: flex;
