--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -1,57 +1,67 @@
-
 .search_header {
     position: relative;
     display: flex;
     max-width: 300px;
     width: 100%;
 }
+
 .search_header input {
     border-radius: 30px;
 }
+
 .search_header button {
     position: absolute;
     right: 10px;
     border: 0;
     color: #d6d6d6;
 }
+
 .search_header button:hover {
-   background-color: transparent;
-   color: #d6d6d6;
+    background-color: transparent;
+    color: #d6d6d6;
 }
+
 .search_header button:active {
-   background-color: transparent !important;
-   color: #d6d6d6 !important;
+    background-color: transparent !important;
+    color: #d6d6d6 !important;
 }
 
 footer {
     background-color: #2c8cc0;
 }
+
 footer .footer_item a {
     text-decoration: none;
     cursor: pointer;
     color: #fff;
 }
+
 footer .footer_item .footer_heading {
     font-size: 18px;
     font-weight: 600;
     color: #fff;
     margin-bottom: 10px;
 }
+
 .footer_item {
     color: #fff;
 }
+
 footer .footer_item ul {
     list-style: none;
     padding: 0;
 }
+
 .footer_item .social_links {
     display: flex;
     align-items: center;
     gap: 15px;
 }
+
 .footer_item .social_links li a {
     font-size: 24px;
 }
+
 footer .footer_item .nav-link {
     font-size: 16px;
     margin-bottom: 5px;
@@ -61,26 +71,31 @@ footer .footer_item .nav-link {
 .video_banner {
     width: 100%;
 }
+
 .our_client .our_client_img img {
     width: 100%;
 }
+
 .our_client .our_client_content h5 {
     font-size: 20px;
     font-weight: 700;
     color: #111;
     margin-bottom: 10px;
 }
+
 .our_client .our_client_content h3 {
     font-size: 36px;
     line-height: 40px;
     color: #111;
     margin-bottom: 15px;
 }
+
 .our_client .our_client_content p {
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
 }
+
 .our_client .our_client_content button {
     padding: 10px 35px;
     border: 1px solid #d6d6d6;
@@ -88,6 +103,7 @@ footer .footer_item .nav-link {
     background-color: #f4f5f6;
     color: #111;
 }
+
 .our_client_content {
     display: flex;
     flex-direction: column;
@@ -95,11 +111,13 @@ footer .footer_item .nav-link {
     justify-content: center;
     height: 100%;
 }
+
 .service_offer {
     background: url(https://www.businessresearchinsights.com/assets/img/Service-we-provide.webp) center center / cover fixed;
     padding: 90px 0;
     color: #fff;
 }
+
 .service_offer .service_card {
     background-color: #fff !important;
     margin-bottom: 20px;
@@ -107,6 +125,7 @@ footer .footer_item .nav-link {
     border-radius: 15px !important;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 .service_offer .service_card a {
     text-align: right !important;
     color: #111;
@@ -115,7 +134,8 @@ footer .footer_item .nav-link {
     font-weight: 500;
     display: inline-block;
     width: 100%;
-}   
+}
+
 .section_heading {
     font-size: 32px;
     text-align: center;
@@ -125,6 +145,7 @@ footer .footer_item .nav-link {
     margin: 0 auto 30px;
     padding: 0 25px 10px;
 }
+
 .section_heading::before {
     position: absolute;
     content: "";
@@ -138,18 +159,22 @@ footer .footer_item .nav-link {
     right: 0;
     border-radius: 7px;
 }
+
 .industry_career {
     background-color: #fff;
     padding: 50px 0;
-        background: url(https://dosrg0qttcg52.cloudfront.net/css/img/business-bg.svg) center center / cover fixed;
+    background: url(https://dosrg0qttcg52.cloudfront.net/css/img/business-bg.svg) center center / cover fixed;
 }
+
 .industry_career .nav-pills {
     flex-direction: column;
 }
+
 .industry_career .nav-pills .nav-item {
     padding: 10px;
     border-bottom: 1px solid #111;
 }
+
 .industry_data_cards .indusrty_card_item {
     background-color: #fff;
     padding: 20px;
@@ -157,33 +182,127 @@ footer .footer_item .nav-link {
     border-radius: 10px;
     height: 190px;
 }
+
 .industry_data_cards .indusrty_card_item h5 {
     font-size: 20px;
     font-weight: 600;
     line-height: 26px;
     margin-bottom: 10px;
 }
+
 .industry_data_cards .indusrty_card_item span {
     font-size: 14px;
     font-weight: 400;
     color: #999;
     margin-bottom: 5px;
 }
+
 .industry_data_cards .indusrty_card_item p {
-        display: -webkit-box;
+    display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     overflow: hidden;
     margin: 5px 0 0;
 }
+
 .industry_career .nav-pills .nav-item .nav-link {
     color: #fff !important;
     font-size: 26px;
     font-weight: 500;
 }
+
 .industry_career .nav-pills .nav-item .nav-link.active {
     background-color: #fff;
     color: #0b7aa0 !important;
     width: 100%;
+    margin: 0;
+}
+
+/* akhil */
+._main_contact .row {
+    background-color: rgb(248, 246, 243);
+    padding: 98px 67px 101px;
+}
+
+.contact-info h2 {
+    font-size: 38px;
+    line-height: 35px;
+    text-transform: uppercase;
+    color: #0B1D3A;
+}
+
+.contact-info p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #616161;
+    font-weight: 400;
+}
+
+.contact-info .label {
+    font-weight: 500;
+}
+
+.contact-info .value {
+    font-size: 1.1rem;
+    color: #0b1b39;
+}
+
+.contact-info .icon {
+    font-size: 1.5rem;
+    color: #e4e4e4;
+    background-color: #f5f5f5;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.contact-form {
+    background-color: #272727;
+    padding: 42px 53px 60px;
+    text-align: center;
+    color: #fff;
+}
+
+.contact-form .form-control::placeholder {
+    color: #ccc;
+}
+
+.contact-form .btn-warning {
+    background-color: #c79e60;
+    border: none;
+    height: 60px;
+    border-radius: 0;
+}
+
+.contact-form form input {
+    height: 60px;
+    padding: 20px;
+    border-radius: 0;
+}
+
+.contact-form form textarea {
+    padding: 20px;
+    border-radius: 0;
+}
+.contact-section {
+    background-image: url('https://devs.pearl-developer.com/mlt/wp-includes/assets/images/inner/breadcumb.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative; }
+
+.overlay {
+    text-align: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+.contact-heading {
+    font-size: 4rem;
+    font-weight: bold;
     margin: 0;
 }
