--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -20,12 +20,24 @@
     border-bottom: 2px solid red;
     font-size: 14px;
 }
+.navbar-nav .nav-link:hover {
+    color: #168eb5 !important;
+}
+.navbar-nav .nav-link.active {
+    color: #168eb5 !important;
+}
+.navbar-nav .nav-item .nav-link{
+    border-bottom: 2px solid transparent;
+}
+.navbar-nav .nav-link.active{
+    border-color: #168eb5 !important;
+}
 
 .social-icon {
   color: #fff;
-  background-color: #0d6efd;
+  /* background-color: #0d6efd; */
   padding: 6px;
-  border-radius: 50%;
+  border-radius: 10px;
   font-size: 14px;
   text-align: center;
   width: 28px;
@@ -75,6 +87,7 @@ footer .footer_item a {
     text-decoration: none;
     cursor: pointer;
     color: #fff;
+    word-break: break-all;
 }
 footer .footer_item .footer_heading {
     font-size: 18px;
@@ -475,4 +488,25 @@ text-align: left;
     top: 10px;
     right: 0;
     z-index: 99999999;
+}
+.about-section {
+  background-color: #f8f9fa;
+}
+.about-section p {
+  font-size: 16px;
+  color: #111;
+  text-align: left;
+}
+.about-section p u {
+    font-size: 18px;
+    color: #013747;
+    font-weight: 600;
+    margin: 0 0 .5rem;
+    text-decoration: underline;
+}
+.team_result_card {
+    padding: 20px;
+    border: 1px solid #e9e9e9;
+    border-radius: 10px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
