--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -510,3 +510,107 @@ text-align: left;
     border-radius: 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+.blog_image_section {
+    display: flex;
+    justify-content: center;
+}
+.blog_section_heading p {
+  transition: max-height 0.3s ease;
+  overflow: hidden;
+  margin: 0;
+}
+
+.blog_section_heading .collapsed {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.blog_section_heading .expanded {
+  display: block;
+}
+.blog_card_item {
+    border: 1px solid #e9e9e9;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* gap: 5px; */
+}
+.blog_card_item .blog-contain {
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+}
+.blog_card_item .blog-contain .blog-label {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 10px 0;
+}
+.blog_card_item .blog-contain a h3 {
+    margin: 10px 0 6px;
+    font-weight: 600;
+    line-height: 1.5;
+    text-transform: capitalize;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    font-size: calc(16px + 2 * (100vw - 320px) / 1600);
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    color: #111;
+    text-align: left;
+}
+.blog_card_item .blog-contain a p {
+    font-size: 14px;
+    text-align: left;
+    line-height: 22px;
+    color: #777;
+}
+.blog_card_item .blog-contain a {
+    text-decoration: none;
+}
+.blog_card_item .blog-contain .blog-label .time {
+    display: flex;
+    align-items: center;
+    color: #4a5568;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+.blog_card_item .blog-contain .blog-label .super {
+    display: flex;
+    align-items: center;
+    color: #4a5568;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+.blog_card_item .blog-contain .blog-label .time svg {
+    width: 16px;
+    margin-right: 5px;
+}
+.blog_card_item .blog-contain .blog-label .super svg {
+    width: 16px;
+    margin-right: 5px;
+}
+.blog_card_item a img {
+    width: 100%;
+    max-width: 100% !important;
+    border-radius: 10px 10px 0 0;
+}
+.blog-paragraph.clamped {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.toggle-link {
+  color: #ff6600;
+  font-weight: 500;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 5px;
+}
