--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -1039,21 +1039,20 @@ span.psw {
 .press-page .press-title {
     color: #007399;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 22px;
     margin-bottom: 15px;
 }
 
 .press-page .press-date {
     color: #333;
-    font-size: 14px;
+    font-size: 18px;
     margin-bottom: 15px;
 }
-
-.press-page .view-more {
-    color: #0d6efd;
-    cursor: pointer;
+._ad_anchor{
+    text-decoration: none;
+    margin-left: 5px;
+    color: #f6921e;
 }
-
 /* press page end */
 
 
