--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -427,10 +427,10 @@ footer .footer_item .nav-link {
 }
 
 .contact-section {
-    background-image: url('https://devs.pearl-developer.com/mlt/wp-includes/assets/images/inner/breadcumb.jpg');
+    background-image: url('https://images.unsplash.com/photo-1596524430615-b46475ddff6e?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover;
     background-position: center;
-    height: 450px;
+    padding: 50px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -440,12 +440,94 @@ footer .footer_item .nav-link {
 .overlay {
     text-align: center;
     color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color:rgb(0 0 0 / 14%);
     padding: 25px;
     border-radius: 10px;
     margin: 10px;
 }
+.ad_icon_contact {
+    width: 60px;
+    height: 60px;
+    font-size: 20px;
+    color: #000;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.15);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
 
+._main_profile .user_profile .profile_img img {
+    width: 100%;
+    border-radius: 10px;
+}
+._main_profile .user_profile {
+    background-color: #f4f5f6;
+    padding: 10px 10px 10px;
+    border-radius: 10px;
+}
+._main_profile .profile_detail {
+    display: flex;
+    gap: 10px;
+    /* align-items: center; */
+    /* padding: 10px 0; */
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+.profile_content_section {
+    display: flex;
+    align-items: flex-start;
+    padding: 10px;
+    gap: 20px;
+}
+._main_profile .profile_detail .detail_item p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #777;
+    margin: 0;
+    line-height: 24px;
+}
+._main_profile .profile_detail .detail_item h5 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #1b1c1d;
+    margin: 0;
+    line-height: 30px;
+}
+._main_profile .profile_detail .detail_item h5.user_name {
+    color: #f6921e;
+}
+button.profile_btn {
+    white-space: nowrap;
+    border: 1px solid #f6921e;
+    background-color: #f6921e;
+    color: #fff;
+    padding: 7px 25px;
+    border-radius: 25px;
+    transition: 0.5s ease-in-out;
+}
+button.profile_btn:hover {
+    border: 1px solid #f6921e;
+    background-color: #fff;
+    color: #f6921e;
+}
+.profile_offcanvas form .form-label {
+    color: #111;
+    font-weight: 500;
+    font-size: 14px;
+    margin: 0;
+}
+.form-control:focus {
+    box-shadow: none !important;
+    border: 1px solid #f6921e !important;
+}
+.form-select:focus {
+    box-shadow: none !important;
+    border: 1px solid #f6921e !important;
+}
 @media(max-width: 768px) {
     ._main_contact .row {
         padding: 50px 20px;
@@ -466,9 +548,7 @@ footer .footer_item .nav-link {
     }
 }
 
-    text-align: left;
-    position: relative;
-}
+  
 .industry_career .nav-pills .nav-item .nav-link.active::after {
     content: "";
     position: absolute;
