--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -895,6 +895,7 @@ span.psw {
     align-items: center;
     gap: 20px;
     margin: 10px 0;
+    justify-content: space-between;
 }
 
 .blog_card_item .blog-contain a h3 {
@@ -922,7 +923,9 @@ span.psw {
 
 .blog_card_item .blog-contain a {
     text-decoration: none;
+    color: #00878e;
 }
+
 
 .blog_card_item .blog-contain .blog-label .time {
     display: flex;
@@ -964,7 +967,7 @@ span.psw {
 }
 
 .toggle-link {
-    color: #ff6600;
+    color: #f6921e !important;
     font-weight: 500;
     cursor: pointer;
     display: inline-block;
@@ -1261,15 +1264,32 @@ span.psw {
 
 /* ===================== Service Page ========================= */
 /* ===================== press details page ========================= */
+.press_details img {
+    width: 100%;
+}
+
 .press_details .title-bar {
-    background-color: #002e5b;
-    color: white;
+    background-color: transparent;
+    color: #f6921e;
     padding: 15px;
     font-weight: bold;
     font-size: 20px;
-    border-radius: 4px;
+    border-radius: 0;
+    width: fit-content;
+    border-bottom: 2px solid #f6921e;
 }
 
+.page_breadcrumbs .breadcrumb_data {
+    color: #00878e;
+}
+
+.page_breadcrumbs a {
+    text-decoration: none;
+    color: #111;
+}
+.page_breadcrumbs {
+    gap: 5px;
+}
 .press_details .highlight-box {
     border: 1px solid #ddd;
     padding: 15px;
@@ -1378,6 +1398,11 @@ span.psw {
     margin-bottom: 12px;
     font-weight: 600;
     line-height: 1.4;
+        width: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
 
 .card-section .card-content p {
@@ -1400,26 +1425,31 @@ span.psw {
     font-size: 13px;
     color: #666;
     margin-top: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .card-section .card-buttons {
     display: flex;
     gap: 12px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin-top: 14px;
+    justify-content: space-between;
 }
 
 .card-section .btn {
-    padding: 10px 18px;
-    border: none;
+    padding: 10px 15px;
+    border: 1px solid transparent;
     border-radius: 50px;
-    font-size: 14px;
+    font-size: 13px;
     cursor: pointer;
     font-weight: 500;
     color: #fff;
     transition: all 0.3s ease;
     background-size: 200% auto;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
 }
 
 .card-section .btn.blue {
@@ -1429,6 +1459,12 @@ span.psw {
 .card-section .btn.blue:hover {
     background-position: right center;
 }
+.card-section .btn.blue:hover {
+    border: 1px solid #003366;
+    color: #003366;
+    background-color: #fff;
+    background-image: none;
+}
 
 .card-section .btn.green {
     background-image: linear-gradient(to right, #00A6A6 0%, #008080 100%);
@@ -1437,9 +1473,67 @@ span.psw {
 .card-section .btn.green:hover {
     background-position: right center;
 }
+.card-section .btn.green:hover {
+    border: 1px solid #00A6A6;
+    color: #00A6A6;
+    background-color: #fff;
+    background-image: none;
+}
+
 
 .card-section .card-buttons button:hover {
     color: #f6921e;
 }
 
 /* ===================== Agriculture card css ========================= */
+
+
+.loader {
+  border: 5px solid #f3f3f3; 
+  border-top: 5px solid #3498db; 
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 0.8s linear infinite;
+  margin: 50px auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.industies_category .industies_category_list {
+    padding: 0;
+    list-style: none;
+}
+.industies_category .industies_category_list li {
+    margin-bottom: 10px;
+    padding: 7px 10px;
+}
+.industies_category .industies_category_list li h3 {
+    font-size: 24px;
+    font-weight: 500;
+    border-bottom: 2px solid #f6921e;
+    width: fit-content;
+    padding-bottom: 10px;
+    color: #00878e;
+}
+.industies_category .industies_category_list li a {
+    font-size: 18px;
+    text-decoration: none;
+    color: #111;
+}
+.industies_category .industies_category_list li:hover a {
+    color: #f6921e;
+}
+.industies_category .industies_category_list li:hover {
+background-color: #fff;
+}
+
+.about-section h2 {
+    font-size: 34px;
+    color: #f6921e;
+    margin-bottom: 15px;
+}
