--- a/src/Theme/Style/style.css
+++ b/src/Theme/Style/style.css
@@ -1696,7 +1696,7 @@ a.animated-underline::after {
 
 a.animated-underline:hover::after {
     bottom: 100%;
-=======
+}
 .form-check {
     display: block;
     min-height: 1.5rem;
